@@ -12,12 +12,14 @@ OBJ            = demo.o
 #MCU_TARGET     = atmega1281
 #MCU_TARGET     = atmega16
 #MCU_TARGET     = atmega163
-#MCU_TARGET     = atmega164
+#MCU_TARGET     = atmega164p
 #MCU_TARGET     = atmega165
+#MCU_TARGET     = atmega165p
 #MCU_TARGET     = atmega168
 #MCU_TARGET     = atmega169
+#MCU_TARGET     = atmega169p
 #MCU_TARGET     = atmega32
-#MCU_TARGET     = atmega324
+#MCU_TARGET     = atmega324p
 #MCU_TARGET     = atmega325
 #MCU_TARGET     = atmega3250
 #MCU_TARGET     = atmega329
@@ -26,6 +28,7 @@ OBJ            = demo.o
 #MCU_TARGET     = atmega64
 #MCU_TARGET     = atmega640
 #MCU_TARGET     = atmega644
+#MCU_TARGET     = atmega644p
 #MCU_TARGET     = atmega645
 #MCU_TARGET     = atmega6450
 #MCU_TARGET     = atmega649
