@@ -1,3 +1,9 @@
+2006-04-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* doc/examples/demo/iocompat.h: Rename ATmega164/324 to
+	ATmega164P/324P, add support for ATmega644P.
+	* doc/examples/demo/Makefile: (Ditto.)
+
 2006-04-01 Anatoly Sokolov <aesok@post.ru>
 
 	* configure.ac: Add tests for the ATmega644P support. Rename 
